updated background and font

--- a/astylesheet.css
+++ b/astylesheet.css
@@ -11,7 +11,8 @@ h1{background-color: royalblue;}
 h3{background-color: silver;}
 h4{background-color: magenta;}
 img{width: 200.5}
-h1{font-family: Arial;}
+h1{font-family: Baskerville;}
+body{background-color: indigo;}
 
 
 /* Style the tab */
