--- a/astylesheet.css
+++ b/astylesheet.css
@@ -12,7 +12,7 @@ h3{background-color: silver;}
 h4{background-color: magenta;}
 img{width: 200.5}
 h1{font-family: Baskerville;}
-body{background-color: indigo;}
+body{background-color: lilac;}
 
 
 /* Style the tab */
